@@ -256,17 +256,17 @@ Dialog <- ItemGroup$proto(class=c("Dialog", ItemGroup$class),
 ##' Methods:
 ##' 
 ##' The main method that a dialog has is
-##' its \code{OK_handler} which is a method called with the "OK"
+##' its \code{OK_handler} which is a method called when the "OK"
 ##' button is clicked (one of the default buttons). 
 ##'
 ##' The getters and setters for the main value for an item are
 ##' \code{get_NAME} and \code{set_NAME}, where \code{NAME} is the
-##' property name. The name is specified when the item is constructed
+##' item name. The name is specified when the item is constructed
 ##' (through its \code{name} property) or more conveniently, taken
 ##' from the name of the component in the \code{items} list that
 ##' defines the items for  dialog or item group.
 ##' 
-##' The method \code{to_R} returns the items values as a list (useful in combination with \code{do.call}).
+##' The method \code{to_R} returns the items' values as a list (useful in combination with \code{do.call}).
 ##'
 ##' The method \code{get_item_by_name} returns an item object by its
 ##' name. (Names should be unique.) This is useful if more properties
@@ -316,6 +316,7 @@ Dialog <- ItemGroup$proto(class=c("Dialog", ItemGroup$class),
 ##' @return Returns a proto object. See its \code{show_help} method for details.
 ##' @export
 ##' @examples
+##' ##
 ##' ## a Basic example
 ##' dlg <- aDialog(items=list(
 ##'                  a = numericItem(0),
@@ -325,6 +326,8 @@ Dialog <- ItemGroup$proto(class=c("Dialog", ItemGroup$class),
 ##'                help_string="Help on this dialog"
 ##'                )
 ##' \dontrun{dlg$make_gui()}
+##' ##
+##' ##
 ##' ## example with model_value_changed
 ##' plotIt <- function(n, mean, sd, ...) hist(rnorm(n, mean, sd))
 ##' dlg <- aDialog(items=list(
@@ -336,12 +339,15 @@ Dialog <- ItemGroup$proto(class=c("Dialog", ItemGroup$class),
 ##' buttons="Cancel",
 ##' model_value_changed=function(.) if(.$is_valid()) do.call("plotIt", .$to_R())
 ##' )
+##' ##
 ##' ## validation for n, sd
 ##' n <- dlg$get_item_by_name("n")
 ##' n$validate <- function(., rawvalue) if(rawvalue <= 1) stop("n must be positive integer") else rawvalue
 ##' sd <- dlg$get_item_by_name("sd")
 ##' sd$validate <- function(., rawvalue) if(rawvalue <- 0) stop("sd must be positive") else rawvalue
 ##' \dontrun{dlg$make_gui()}
+##' ##
+##' ##
 ##' ## subtle point about scope. Proto methods can be defined via $<- or [[<- but there is a difference.
 ##' ## $<- does not have lexical scope whereas [[<- does. The $<- might be more natural to type,
 ##' ## but [[<- might be more natural to use. In this example, The "b" button does not work, as it can't find the
