@@ -1,4 +1,4 @@
 \name{GraphEditor}
 \alias{GraphEditor}
-\title{Trait for embedding graphics (RGtk2 only)...}
-\description{Trait for embedding graphics (RGtk2 only)}
+\title{Trait for embedding graphics (Qt, RGtk2 only)...}
+\description{Trait for embedding graphics (Qt, RGtk2 only)}
