@@ -15,17 +15,17 @@ be specified at construction.
 Methods:
 
 The main method that a dialog has is
-its \code{OK_handler} which is a method called with the "OK"
+its \code{OK_handler} which is a method called when the "OK"
 button is clicked (one of the default buttons). 
 
 The getters and setters for the main value for an item are
 \code{get_NAME} and \code{set_NAME}, where \code{NAME} is the
-property name. The name is specified when the item is constructed
+item name. The name is specified when the item is constructed
 (through its \code{name} property) or more conveniently, taken
 from the name of the component in the \code{items} list that
 defines the items for  dialog or item group.
 
-The method \code{to_R} returns the items values as a list (useful in combination with \code{do.call}).
+The method \code{to_R} returns the items' values as a list (useful in combination with \code{do.call}).
 
 The method \code{get_item_by_name} returns an item object by its
 name. (Names should be unique.) This is useful if more properties
@@ -71,7 +71,8 @@ dialog object. May also be an item group
 \item{buttons}{Character vector of button names. "OK","Cancel","Help","Undo","Redo" are some standard ones.
 "SPACE" and "SPRING" adjust the layout.}
 \item{...}{How to pass in other properties and methods of the dialog object. For example \code{OK_handler}.}}
-\examples{## a Basic example
+\examples{##
+## a Basic example
 dlg <- aDialog(items=list(
 a = numericItem(0),
 b = stringItem("a")
@@ -80,6 +81,8 @@ title="The title",
 help_string="Help on this dialog"
 )
 \dontrun{dlg$make_gui()}
+##
+##
 ## example with model_value_changed
 plotIt <- function(n, mean, sd, ...) hist(rnorm(n, mean, sd))
 dlg <- aDialog(items=list(
@@ -91,12 +94,15 @@ out=graphicDeviceItem()
 buttons="Cancel",
 model_value_changed=function(.) if(.$is_valid()) do.call("plotIt", .$to_R())
 )
+##
 ## validation for n, sd
 n <- dlg$get_item_by_name("n")
 n$validate <- function(., rawvalue) if(rawvalue <= 1) stop("n must be positive integer") else rawvalue
 sd <- dlg$get_item_by_name("sd")
 sd$validate <- function(., rawvalue) if(rawvalue <- 0) stop("sd must be positive") else rawvalue
 \dontrun{dlg$make_gui()}
+##
+##
 ## subtle point about scope. Proto methods can be defined via $<- or [[<- but there is a difference.
 ## $<- does not have lexical scope whereas [[<- does. The $<- might be more natural to type,
 ## but [[<- might be more natural to use. In this example, The "b" button does not work, as it can't find the
