@@ -5,7 +5,7 @@
     eval_first=FALSE, attr, model, editor, ...)}
 \description{Item for integers}
 \value{A \code{proto} object. Call \code{obj$show_help()} to view its methods and properties.}
-\seealso{numericItem}
+\seealso{\code{\link{numericItem}}}
 \arguments{\item{value}{Default value for the model}
 \item{name}{Required name for object. Names should be unique within a group of items}
 \item{label}{Optional label, default value is the name}
