@@ -4,6 +4,7 @@
 \usage{tableItem(value=data.frame(V1 = "", V2 = ""), name, label=name,
     help="", tooltip="", attr=list(expand = TRUE), model, editor, ...)}
 \description{List editor -- list <-> tree, must have special structure to list?
+XXX This needs writing
 An item to display a table of data (given as a matrix or data.frame)}
 \value{A \code{proto} object. Call \code{obj$show_help()} to view its methods and properties.}
 \seealso{\code{\link{Item}}}
